# rust_i_telex_teilnehmerserver

./: .gitignore  Cargo.toml  database.db  dist.sh  docs.sh  localisation.json  rustfmt.toml  template.env
migrations/2019-06-25-161306_queue/: down.sql  up.sql
migrations/2019-06-25-161313_servers/: down.sql  up.sql
migrations/2019-06-25-161424_directory/: down.sql  up.sql
src/: client.rs  config.rs  db.rs  db_back.rs  db_backend.rs  errors.rs  main.rs  models.rs  packages.rs  password.rs  schema.rs  serde.rs  server.rs
src/compat/: background_tasks.rs  client.rs  errors.rs  mod.rs
src/data_types/: connector.rs  extension.rs  machine.rs  mod.rs  user.rs
src/database/: iter.rs  misc.rs  mod.rs  tree.rs
src/telex_server/: background_tasks.rs  client.rs  errors.rs  mod.rs  packages.rs  telex_serde.rs
src/web_server/: api.rs  api_types.rs  cookie_parser.rs  misc.rs  mod.rs  session.rs  ui.rs
static/: api.js  entry.html  index.html  localizations_de.json  login.html  main.css  main.js  new.html
templates/: connector.hbs  connector_list.hbs  layout.hbs  list_connectors.hbs  list_machines.hbs  list_users.hbs  log_in.hbs  machine.hbs  machine_list.hbs  nav.hbs  user.hbs  user_list.hbs
templates/error/: 404.hbs
