[package]
name = "rust_i_telex_teilnehmerserver"
version = "0.1.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"
description = "The I-Telex Server rewritten in rust"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.3"
anyhow = "1.0"
thiserror = "1.0"
async-std = { version = "1.5.0", features = ["attributes"] }
futures = "0.3.4"
simple-signal = {version = "1.1.1"}
log = { version = "0.4.8", features = ["release_max_level_info"] }
dotenv = "0.15"
simplelog = "0.7"
tide = "0.6"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "3.4.3"
cookie = "0.13"
rand = "0.7"
itelex = { version="0.1", features = ["server", "serde_deserialize", "serde_serialize"], git = "https://github.com/soruh/itelex_rust.git" }



[profile.release]
lto = true