[package]
name = "rust_i_telex_teilnehmerserver"
version = "0.1.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"
description = "The I-Telex Server rewritten in rust"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.4.0"
anyhow = "1.0.32"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.5"
simple-signal = "1.1.1"
log = { version = "0.4.11", features = ["release_max_level_info"] }
dotenv = "0.15.0"
simplelog = "0.8.0"
tide = "0.13.0"
mime = "0.3.16"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
dashmap = "3.11.10"
cookie = "0.14.2"
rand = "0.7.3"
itelex = { version = "0.3", features = ["server", "serde_deserialize", "serde_serialize"], git = "https://github.com/soruh/itelex_rust.git" }
base64 = "0.12.3"
uuid = { version = "0.8.1", features = ["serde"] }
sled = "0.34.3"


[profile.release]
lto = true
